# rust-template

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
.github/workflows/: blank.yml  run_test.yml  rust.yml
src/: lib.rs  main.py  main.rs
src/crates/: mod.rs  random.rs  serde_test.rs
src/datastructures/: mod.rs  stack.rs
src/phrases/: greetings.rs  mod.rs
src/stuff/: greetings.rs  match_test.rs  mod.rs  parallel_test.rs  pattern_test.rs  result_test.rs  write_file.rs
