[package]
name = "my_package"
version = "0.1.0"
authors = ["BuRny <gamingburny@gmail.com>"]
edition = "2018"

[dependencies]
# To have vector, map and set comprehension
cute = "0.3.0"
# To generate random numbers
rand = "0.7.2"
# Serialize and deserialize structs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Multithreading made easy
rayon = "1.3.0"
