[package]
name = "my_package"
version = "0.1.0"
authors = ["BuRny <gamingburny@gmail.com>"]
edition = "2021"

[dependencies]
# To have vector, map and set comprehension
cute = "0.3.0"
# To generate random numbers
rand = "0.8.3"
# Serialize and deserialize structs
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
# Multithreading made easy
rayon = "1.5.0"

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = 'abort'     # Abort on panic

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
